--- a/package.json
+++ b/package.json
@@ -56,11 +56,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.24.0",
     "nedb": "^1.8.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vue-select": "^3.1.0",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.0.1",
     "vuex-electron": "^1.0.0"
   },
